adding demo ribbon

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,10 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag "//www.google.com/jsapi", "chartkick"
     = csrf_meta_tags
-  %body
+  %body.wrapper
+    .ribbon-wrapper-green
+      .ribbon-green
+        AEDG Demo Map
+        %br/
+        All data is static
     = yield
