--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
   %body.wrapper
     .ribbon-wrapper-green
       .ribbon-green
-        AEDG Demo Map
+        AEDG Workshop
         %br/
-        All data is static
+        Demo Map - Static Data
     = yield
